; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_git_patch_from_buffer.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_git_patch_from_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_patch_from_buffer(i32** %0, i8* %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32* @git_patch_parse_ctx_init(i8* %11, i64 %12, i32* %13)
  store i32* %14, i32** %9, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @GIT_ERROR_CHECK_ALLOC(i32* %15)
  %17 = load i32**, i32*** %5, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = call i32 @git_patch_parse(i32** %17, i32* %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @git_patch_parse_ctx_free(i32* %20)
  %22 = load i32, i32* %10, align 4
  ret i32 %22
}

declare dso_local i32* @git_patch_parse_ctx_init(i8*, i64, i32*) #1

declare dso_local i32 @GIT_ERROR_CHECK_ALLOC(i32*) #1

declare dso_local i32 @git_patch_parse(i32**, i32*) #1

declare dso_local i32 @git_patch_parse_ctx_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
